-readme updated for job runners, popup configure-

--- a/yt-chrome-plugin-frontend/popup.html
+++ b/yt-chrome-plugin-frontend/popup.html
@@ -75,6 +75,6 @@
 <body>
   <h1>YouTube Comment Insights</h1>
   <div id="output" class="section"></div>
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
